<?xml version="1.0"?>
<package>
  <name>wm_dynamixel_node</name>
  <version>1.0.0</version>
  <description>The sara_arm package</description>
  <author email="lucas.maurice@outlook.com">Lucas Maurice</author>
  <maintainer email="lucas.maurice@outlook.com">Lucas Maurice</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/WalkingMachine/wm_dynamixel</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>dynamixel_driver</build_depend>
  <run_depend>dynamixel_driver</run_depend>

  <build_depend>hardware_interface</build_depend>
  <run_depend>hardware_interface</run_depend>

  <build_depend>diagnostic_msgs</build_depend>
  <run_depend>diagnostic_msgs</run_depend>

  <build_depend>pluginlib</build_depend>
  <run_depend>pluginlib</run_depend>

  <build_depend>combined_robot_hw</build_depend>
  <run_depend>combined_robot_hw</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <hardware_interface plugin="${prefix}/wm_dynamixel_hw_plugin.xml"/>
  </export>
</package>
